: SSG-1698. add permgen max of 128M
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/trunk@16577 219f1c6e-4a0e-43c8-96f2-6e749be13fd4