@@ -34,7 +34,7 @@ if [ "${this_is_a_partition}" == "true" ] ; then
 	fi
 fi
 
-partition_opts="-Xmx${java_ram}k -Xss256k"
+partition_opts="-Xmx${java_ram}k -XX:MaxPermSize=128M -Xss256k"
 
 export partition_opts
 unset system_ram
